main.css
body {
  font-size: 16px;
  font-family: system-ui;
  margin: 0;
  padding: 0;
}

h1 {
  font-size: 32px;
}

article, body > nav {
  width: 50em;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 50em) {
  article, body > nav {
    width: 100%;
    margin-left: 0;
    margin-right: 0;
  }
}

body > nav {
  padding-top: 2em;
}

.publish-date {
  display: block;
  margin-top: -1em;
  margin-bottom: 2em;
  font-size: 14px;
  color: #666;
  font-style: italic;
}

header {
  background-color: #999;
  color: white;
  text-align: center;
  padding: 20px;
}

header a {
  color: white;
  text-decoration: none;
}

